@@ -6,6 +6,7 @@ if prefer :apps4, 'learn-rails'
   # preferences
   prefs[:authentication] = false
   prefs[:authorization] = false
+  prefs[:dashboard] = 'none'
   prefs[:ban_spiders] = false
   prefs[:better_errors] = true
   prefs[:database] = 'default'
