@@ -18,6 +18,7 @@ stage_two do
       generate 'pages:roles -f' if prefer :authorization, 'roles'
       generate 'pages:authorized -f' if prefer :authorization, 'pundit'
   end
+  generate 'pages:upmin -f' if prefer :dashboard, 'upmin'
   generate 'layout:navigation -f'
   ### GIT ###
   git :add => '-A' if prefer :git, true
