@@ -4,6 +4,7 @@
 if prefer :apps4, 'rails-devise'
   prefs[:authentication] = 'devise'
   prefs[:authorization] = false
+  prefs[:dashboard] = 'none'
   prefs[:better_errors] = true
   prefs[:deployment] = 'none'
   prefs[:git] = true
