@@ -83,6 +83,9 @@ if (recipes.include? 'devise') || (recipes.include? 'omniauth')
         ["LinkedIn", "linkedin"], ["Google-Oauth-2", "google_oauth2"], ["Tumblr", "tumblr"]] unless prefs.has_key? :omniauth_provider
   end
   prefs[:authorization] = multiple_choice "Authorization?", [["None", "none"], ["Simple role-based", "roles"], ["Pundit", "pundit"]] unless prefs.has_key? :authorization
+  if (prefer :authorization, 'roles') || (prefer :authorization, 'pundit')
+    prefs[:dashboard] = multiple_choice "Admin interface?", [["None", "none"], ["Upmin", "upmin"]] unless prefs.has_key? :dashboard
+  end
 end
 
 ## Form Builder
