@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "3.0.15"
+  VERSION = "3.0.16"
 end
